force-app/main/default/objects/Event_Expense__c/fields/City_State__c.field-meta.xml
<CustomField>
    <fullName>City_State__c</fullName>
    <label>City/State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>