force-app/main/default/objects/Event_Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Activities &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Decor</fullName>
            </value>
            <value>
                <fullName>External Speakers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Printing</fullName>
                <label>Printing and Postage</label>
            </value>
            <value>
                <fullName>Resources and Materials</fullName>
            </value>
            <value>
                <fullName>Site Rental</fullName>
                <label>Venue</label>
            </value>
            <value>
                <fullName>Staff Expenses</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
                <label>Transport (External)</label>
            </value>
            <value>
                <fullName>Travel and Subsistence (Staff)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>