force-app/main/default/objects/Event_Expense__c/fields/Site_Rental__c.field-meta.xml
<CustomField>
    <fullName>Site_Rental__c</fullName>
    <label>Expense Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>